Freedom Sanbox Ant Deploy/src/objects/XRay_ScoreCard__c.object
<CustomObject>
    <fields>
        <fullName>Analysis_Commentary__c</fullName>
        <label>Analysis Commentary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_Question_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer Question Master</label>
        <referenceTo>Question_Option_List__c</referenceTo>
        <relationshipLabel>X-Ray Score Cards</relationshipLabel>
        <relationshipName>X_Ray_Score_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Sequence__c</fullName>
        <description>This will store the sequence of question.</description>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Bank_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Bank List</label>
        <referenceTo>Question_Bank_List__c</referenceTo>
        <relationshipLabel>X-Ray Score Cards</relationshipLabel>
        <relationshipName>X_Ray_Score_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score_Master__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XRayScoreCardMaster__c</fullName>
        <label>X-Ray Score Card Detail</label>
        <referenceTo>X_Ray_Score_Card_Detail__c</referenceTo>
        <relationshipLabel>X-Ray Score Cards</relationshipLabel>
        <relationshipName>X_Ray_Score_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>X-Ray Score Card</label>
    <nameField>
        <label>X-Ray Score Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>X-Ray Score Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>